--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "bcryptjs": "^3.0.2",
     "geist": "^1.3.0",
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
@@ -38,6 +39,7 @@
     "zod": "^3.23.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
