--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "pg": "^8.14.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "^2.15.1",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "zod": "^3.23.3"
