--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
+    "@google/generative-ai": "^0.24.0",
     "@prisma/client": "^5.14.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
@@ -34,6 +35,7 @@
     "lucide-react": "^0.486.0",
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
+    "openai": "^4.91.1",
     "pg": "^8.14.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
