--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lucide-react": "^0.486.0",
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
+    "openai": "^4.91.1",
     "pg": "^8.14.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
