--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,13 +2,9 @@ name: ci
 
 on: 
   push:
-    branches:
-      - main
-      - dev
+    branches: ["**"]
   pull_request:
-    branches:
-      - main
-      - dev
+    branches: ["**"]
 
 jobs:
   build:
