--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
     "bcryptjs": "^3.0.2",
+    "dotenv": "^16.4.7",
     "geist": "^1.3.0",
+    "googleapis": "^148.0.0",
     "lucide": "^0.486.0",
     "lucide-react": "^0.486.0",
-    "next": "^15.0.1",
+    "next": "^15.2.5",
     "next-auth": "5.0.0-beta.25",
     "openai": "^4.91.1",
     "pg": "^8.14.1",
@@ -53,11 +55,12 @@
     "@types/pg": "^8.11.11",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^8.1.0",
-    "@typescript-eslint/parser": "^8.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.29.1",
+    "@typescript-eslint/parser": "^8.29.1",
     "cypress": "^14.2.1",
-    "eslint": "^8.57.0",
+    "eslint": "^9.24.0",
     "eslint-config-next": "^15.0.1",
+    "eslint-plugin-next": "^0.0.0",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
