--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "cypress": "^14.2.1",
     "eslint": "^9.24.0",
     "eslint-config-next": "^15.0.1",
+    "eslint-import-resolver-typescript": "^4.3.2",
     "eslint-plugin-next": "^0.0.0",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
