--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-spinners": "^0.17.0",
     "recharts": "^2.15.1",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
