--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "geist": "^1.3.0",
@@ -50,6 +51,7 @@
     "zod": "^3.23.3"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.4",
     "@types/bcrypt": "^5.0.2",
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.14.10",
