--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,4 +87,4 @@ jobs:
       run: npm install
 
     - name: Run unit tests
-      run: npm test -- --watchAll=false --passWithNoTests
+      run: npm run test
