--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
     "start": "next start",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "jest"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
@@ -46,9 +47,13 @@
     "recharts": "^2.15.1",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
+    "ts-node": "^10.9.2",
     "zod": "^3.23.3"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/bcrypt": "^5.0.2",
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.14.10",
@@ -62,11 +67,14 @@
     "eslint-config-next": "^15.0.1",
     "eslint-import-resolver-typescript": "^4.3.2",
     "eslint-plugin-next": "^0.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "prisma": "^5.14.0",
     "tailwindcss": "^3.4.3",
+    "ts-jest": "^29.3.2",
     "typescript": "^5.5.3"
   },
   "ct3aMetadata": {
