--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,12 +62,7 @@ jobs:
       run: npm ci
 
     - name: Run Cypress tests
-      uses: cypress-io/github-action@v6
-      with:
-        start: npm run dev
-        wait-on: 'http://localhost:3000'
-        config-file: cypress.config.js
-        browser: chrome
+      run: npx start-server-and-test start http://localhost:3000 'cypress run'
 
   unit-tests:
     name: Unit tests
