Added signup tests

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "preview": "next build && next start",
     "start": "next start",
     "typecheck": "tsc --noEmit",
-    "test": "jest --verbose"
+    "test": "jest --verbose",
+    "cypress": "cypress run"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
