--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,7 +92,13 @@ jobs:
 
     - name: Install dependencies
       run: npm ci
+      
+    - name: Generate Prisma client (if using Prisma)
+      run: npx prisma generate
 
+    - name: Push schema to test DB
+      run: npx prisma db push --preview-feature
+      
     - name: Run Cypress tests
       run: npx start-server-and-test dev http://localhost:3000 'cypress run'
 
