--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "geist": "^1.3.0",
     "googleapis": "^148.0.0",
     "lucide": "^0.486.0",
@@ -59,6 +60,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/bcrypt": "^5.0.2",
     "@types/eslint": "^8.56.10",
+    "@types/express": "^5.0.1",
     "@types/node": "^20.14.10",
     "@types/pg": "^8.11.11",
     "@types/react": "^18.3.3",
