--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,6 +72,9 @@ jobs:
       with:
         node-version: '18'
         cache: 'npm'
+        
+    - name: Install sharp for Linux
+      run: npm install sharp --platform=linux --arch=x64
 
     - name: Install dependencies
       run: npm install 
