--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
+    "@google/genai": "^0.14.0",
     "@google/generative-ai": "^0.24.0",
     "@prisma/client": "^5.14.0",
     "@t3-oss/env-nextjs": "^0.10.1",
@@ -35,6 +36,8 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "fuse": "^0.12.1",
+    "fuse.js": "^7.1.0",
     "geist": "^1.3.0",
     "googleapis": "^148.0.0",
     "lucide": "^0.486.0",
