--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/bcrypt": "^5.0.2",
     "@types/eslint": "^8.56.10",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.14.10",
     "@types/pg": "^8.11.11",
     "@types/react": "^18.3.3",
