--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "fuse.js": "^7.1.0",
     "geist": "^1.3.0",
     "googleapis": "^148.0.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide": "^0.486.0",
     "lucide-react": "^0.486.0",
     "next": "^15.2.5",
@@ -65,6 +66,7 @@
     "@types/eslint": "^8.56.10",
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.14.10",
     "@types/pg": "^8.11.11",
     "@types/react": "^18.3.3",
