--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "fuse.js": "^7.1.0",
     "geist": "^1.3.0",
     "googleapis": "^148.0.0",
+    "html2pdf.js": "^0.10.3",
     "jsonwebtoken": "^9.0.2",
     "lucide": "^0.486.0",
     "lucide-react": "^0.486.0",
